--- a/client/src/app/modules/invoicing/components/invoice-payment/invoice-payment.component.css
+++ b/client/src/app/modules/invoicing/components/invoice-payment/invoice-payment.component.css
@@ -1,3 +1,15 @@
 .advise {
   padding-top: 20px;
 }
+
+.button-td {
+  width: 35px
+}
+
+.mini-fab-add {
+  margin: 5px
+}
+
+.add-button {
+  top: -8px;
+}
