--- a/client/src/app/modules/quotation/components/payment-list/payment-list.component.html
+++ b/client/src/app/modules/quotation/components/payment-list/payment-list.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z2 form-div">
+<div class=" form-div" [ngClass]="{'mat-elevation-z2':!isForDashboard && paymentSearch && overrideIconAction==''}">
   <div class=" full-width">
     <table class="full-width table-fixed-layout" *ngIf="!isForDashboard && paymentSearch">
       <tr>
