--- a/client/src/app/modules/quotation/components/formalite/formalite.component.html
+++ b/client/src/app/modules/quotation/components/formalite/formalite.component.html
@@ -153,8 +153,8 @@
       <add-debour [editMode]="editMode" [(provision)]="provision">
       </add-debour>
     </mat-tab>
-    <mat-tab label="Documents" *ngIf="formalite && formalite.id">
-      <attachments [entity]="formalite" [editMode]="editMode" [entityType]="FORMALITE_ENTITY_TYPE.entityType">
+    <mat-tab label="Documents" *ngIf="formalite && formalite.id && provision">
+      <attachments [entity]="provision" [editMode]="editMode" [entityType]="PROVISION_ENTITY_TYPE.entityType">
       </attachments>
     </mat-tab>
     <mat-tab label="Historique" *ngIf="formalite && formalite.id">
