--- a/client/src/app/modules/quotation/components/announcement/announcement.component.html
+++ b/client/src/app/modules/quotation/components/announcement/announcement.component.html
@@ -94,14 +94,14 @@
           </table>
           <table class="full-width">
             <tr>
-              <td *ngIf="announcement.confrere && announcement.confrere.id !=confrereJssSpel.id ">
-                <single-attachment [entity]=" announcement!" [entityType]="ANNOUNCEMENT_ENTITY_TYPE.entityType"
+              <td *ngIf="announcement.confrere && announcement.confrere.id !=confrereJssSpel.id && provision ">
+                <single-attachment [entity]=" provision" [entityType]="PROVISION_ENTITY_TYPE.entityType"
                   [editMode]="editMode" [attachmentTypeToDisplay]="attachmentTypePublicationReceipt"
                   (onUploadedFile)="updateAttachments($event)">
                 </single-attachment>
               </td>
-              <td *ngIf="announcement.confrere && announcement.confrere.id !=confrereJssSpel.id">
-                <single-attachment [entity]=" announcement!" [entityType]="ANNOUNCEMENT_ENTITY_TYPE.entityType"
+              <td *ngIf="announcement.confrere && announcement.confrere.id !=confrereJssSpel.id && provision">
+                <single-attachment [entity]=" provision" [entityType]="PROVISION_ENTITY_TYPE.entityType"
                   [editMode]="editMode" [attachmentTypeToDisplay]="attachmentTypePublicationFlag"
                   (onUploadedFile)="updateAttachments($event)">
                 </single-attachment>
@@ -223,8 +223,8 @@
       <add-debour [editMode]="editMode" [(provision)]="provision">
       </add-debour>
     </mat-tab>
-    <mat-tab label="Documents" *ngIf="announcement.id!=null && announcement.id!=undefined">
-      <attachments [entity]="announcement" [editMode]="editMode" [entityType]="ANNOUNCEMENT_ENTITY_TYPE.entityType">
+    <mat-tab label="Documents" *ngIf="announcement.id!=null && announcement.id!=undefined && provision">
+      <attachments [entity]="provision" [editMode]="editMode" [entityType]="PROVISION_ENTITY_TYPE.entityType">
       </attachments>
     </mat-tab>
     <mat-tab label="Historique" *ngIf="announcement && announcement.id">
