--- a/client/src/app/modules/invoicing/components/invoice-payment/invoice-payment.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-payment/invoice-payment.component.html
@@ -13,7 +13,7 @@
       (actionBypass)="openAssociationDialog($event)"></payment-list>
   </div>
   <div class=" advise" *ngIf="displayAddCashPayment">
-    <h3>Déclarer un paiement en espèce</h3>
+    <h3>Déclarer un paiement en espèces</h3>
     <div>
       <form [formGroup]="invoicePaymentForm">
         <div class="full-width">
