--- a/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
+++ b/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
@@ -176,13 +176,23 @@
           {{getPriceTotal()|number}} €
         </td>
       </tr>
-      <ng-container *ngIf="instanceOfCustomerOrderFn(quotation)">
-        <tr class="mat-row" *ngFor="let deposit of quotation.deposits">
+      <ng-container *ngIf="instanceOfCustomerOrderFn(quotation) && getCurrentInvoiceForCustomerOrder()!=undefined">
+        <tr class="mat-row" *ngFor="let deposit of getCurrentInvoiceForCustomerOrder()!.deposits">
           <td class="mat-cell">
-            Acompte n°{{deposit.id}}
+            Acompte n°{{deposit.id}} - {{deposit.label}}
           </td>
           <td class="td-price mat-cell">
             - {{deposit.depositAmount|number}} €
+          </td>
+        </tr>
+      </ng-container>
+      <ng-container *ngIf="instanceOfCustomerOrderFn(quotation) && getCurrentInvoiceForCustomerOrder()!=undefined">
+        <tr class="mat-row" *ngFor="let payment of getCurrentInvoiceForCustomerOrder()!.payments">
+          <td class="mat-cell">
+            Paiement n°{{payment.id}} - {{payment.label}}
+          </td>
+          <td class="td-price mat-cell">
+            - {{payment.paymentAmount|number}} €
           </td>
         </tr>
       </ng-container>
