--- a/client/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -293,7 +293,7 @@
       <span>Recevoir le mail de facturation</span>
     </button>
     <button mat-menu-item (click)="generateMailingLabel()">
-      <span>Imprimer une étiquette postale</span>
+      <span>Imprimer une étiquette/lettre postale</span>
     </button>
   </mat-menu>
 </button>
