--- a/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
+++ b/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
@@ -221,7 +221,8 @@
           </ordering-list>
         </mat-tab>
         <mat-tab label="Prestations" *ngIf="tiers.id!=null && tiers.id!=undefined">
-          <provision-list class="integration-component" *ngIf="this.provisionSearch.customerOrders"
+          <provision-list class="integration-component"
+            *ngIf="this.provisionSearch.customerOrders && this.provisionSearch.customerOrders.length>0"
             [affaireSearch]="provisionSearch" [isForTiersIntegration]="true">
           </provision-list>
         </mat-tab>
