--- a/client/src/app/modules/quotation/components/quotation-management/quotation-management.component.html
+++ b/client/src/app/modules/quotation/components/quotation-management/quotation-management.component.html
@@ -242,7 +242,7 @@
               <addressing [editMode]=" editMode" [document]="paperDocument" [displayOverrideMail]="true"
                 [displayNumberMailing]="true" (documentChange)="updateAdressing($event)" [displayOverrideEMail]="false">
               </addressing>
-              <table class="full-width">
+              <table class="full-width break-line">
                 <tr *ngIf="paperLabelResult">
                   <td>
                     <p>L'adressage des documents papiers est le suivant (récupéré depuis
