--- a/client/src/app/modules/tiers/components/confrere/confrere.component.html
+++ b/client/src/app/modules/tiers/components/confrere/confrere.component.html
@@ -302,7 +302,8 @@
         </ordering-list>
       </mat-tab>
       <mat-tab label="Prestations" *ngIf="selectedConfrere.id!=null && selectedConfrere.id!=undefined">
-        <provision-list class="integration-component" *ngIf="this.provisionSearch.customerOrders"
+        <provision-list class="integration-component"
+          *ngIf="this.provisionSearch.customerOrders && this.provisionSearch.customerOrders.length>0"
           [affaireSearch]="provisionSearch" [isForTiersIntegration]="true">
         </provision-list>
       </mat-tab>
