--- a/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
+++ b/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
@@ -25,13 +25,8 @@
           </td>
           <td *ngIf="newDebour.competentAuthority">
             <select-payment-types [(model)]="newDebour.paymentType" label="Mode de paiement" [form]="debourForm"
-              *ngIf=" !newDebour.competentAuthority.competentAuthorityType.isDirectCharge"
-              [filteredPaymentType]="[paymentTypeVirement,paymentTypeCb, paymentTypeCheques,paymentTypeEspeces,paymentTypeAccount,paymentTypePrelevement]"
-              propertyName="paymentType" [isMandatory]="true" [isDisabled]="!editMode"></select-payment-types>
-            <select-payment-types [(model)]="newDebour.paymentType" label="Mode de paiement" [form]="debourForm"
-              *ngIf="  newDebour.competentAuthority.competentAuthorityType.isDirectCharge"
-              [filteredPaymentType]="[paymentTypeVirement,paymentTypeCb, paymentTypeCheques,paymentTypeEspeces]"
-              propertyName="paymentType" [isMandatory]="true" [isDisabled]="!editMode"></select-payment-types>
+              [filteredPaymentType]="newDebour.competentAuthority.paymentTypes" propertyName="paymentType"
+              [isMandatory]="true" [isDisabled]="!editMode"></select-payment-types>
           </td>
           <td *ngIf="newDebour.paymentType && newDebour.paymentType.id ==paymentTypeCb.id">
             <generic-datepicker [(model)]="newDebour.paymentDateTime" label="Date de paiement" [form]="debourForm"
